WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63484
[Windows, WinCairo] Don't Attempt to Create Zero-Size DIB
https://bugs.webkit.org/show_bug.cgi?id=63484
Summary
[Windows, WinCairo] Don't Attempt to Create Zero-Size DIB
Brent Fulgham
Reported
2011-06-27 14:44:53 PDT
While investigating a separate issue, I noticed that I was hitting an assertion in the Cairo drawing layer because it was attempting to use an invalid HBITMAP created in the WebNodeHighlight::update method. The underlying issue was that the CreateDIBSection function was failing, because it was being requested to create a section of zero height. I think the attached patch would be safe for the CoreGraphics and Cairo ports, but wanted to see if anyone knew of a reason why it would be bad to exit early in the case of a zero height (or zero width) paint region.
Attachments
Patch
(1.46 KB, patch)
2011-06-27 14:51 PDT
,
Brent Fulgham
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2011-06-27 14:51:38 PDT
Created
attachment 98790
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-06-28 08:10:55 PDT
Comment on
attachment 98790
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=98790&action=review
> Source/WebKit/win/WebNodeHighlight.cpp:155 > + ASSERT_WITH_MESSAGE(hbmp.get(), "::CreateDIBSection failed with error %lu", ::GetLastError());
No need for the .get() here.
Brent Fulgham
Comment 3
2011-06-28 08:42:31 PDT
Committed
r89932
: <
http://trac.webkit.org/changeset/89932
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug