2011-06-27  Brent Fulgham  <bfulgham@webkit.org>

Reviewed by Adam Roben.

        Avoid attempt to create a zero-size DIB.
        https://bugs.webkit.org/show_bug.cgi?id=63484.

        * WebNodeHighlight.cpp:
        (WebNodeHighlight::update): Check for zero-height (or zero-width)
        region for DIB, and exit early if attempting to create a zero-size
        DIB/BITMAP.


Canonical link: https://commits.webkit.org/79218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89932 268f45cc-cd09-0410-ab3c-d52691b4dbfc